--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Language and Cognition Lab Universidad de Chile</title>
+    <title>Language and Cognition Lab HEEEYY Universidad de Chile</title>
 <!--
 Classic Template
 http://www.templatemo.com/tm-488-classic
